<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map_nav"
        android:icon="@drawable/ic_map"
        android:title="@string/map_nav" />
    <item
        android:id="@+id/profile_nav"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile_page_nav" />
    <item
        android:id="@+id/scan_nav"
        android:icon="@drawable/ic_code_scanner"
        android:title="@string/scanner_nav" />
    <item
        android:id="@+id/search_nav"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_nav" />
    <item
        android:id="@+id/leaderboard_nav"
        android:icon="@drawable/ic_leaderboards"
        android:title="@string/leaderboard_nav" />
</menu>
