<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/code_scanned_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/short_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/code_scanned_record_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_location"
        android:textColor="#455A64"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/code_scanned_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_a_picture" />

        <ImageView
            android:id="@+id/code_scanned_image_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/no_picture"
            app:srcCompat="@android:drawable/checkbox_off_background" />

    </LinearLayout>

</LinearLayout>