<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scanned_raw_value_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/default_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/scanned_by_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="Scanned by: Loading..."
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/code_scanned_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/short_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:textColorHint="#78909C" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/code_scanned_record_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/record_location"
        android:textColor="#455A64"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/code_scanned_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/take_a_picture"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/code_scanned_image_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/no_picture"
            app:srcCompat="@android:drawable/checkbox_off_background" />

    </LinearLayout>

</LinearLayout>