<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/map_nav"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:theme="@style/Theme.ExplQRer"
        android:title="@string/map_nav" />
    <item
        android:id="@+id/profile_qr_nav"
        android:icon="@drawable/ic_qr_code"
        android:title="Profile QR" />
    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/search_nav"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_nav" />
    <item
        android:id="@+id/ranking"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/leaderboard_nav" />
</menu>